# gis-processor

./: .flake8  README.md  find_gis_files.py  gis_processor.py  gis_utils.py  pyproject.toml
gis_processor/: av_db_gis.py  cli.py  files_db_gis.py  main.py  processor.py  utils.py
