[tool.poetry]
name = "gis_processor"
version = "0.1.0"
description = "Find and gather related gis-files"
authors = ["Claus Juhl Knudsen <cjk@aarhus.dk>"]
include = ["pyproject.toml"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
gisprocessor = "gis_processor.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
